--- a/config/sync/filter.format.full_html.yml
+++ b/config/sync/filter.format.full_html.yml
@@ -3,9 +3,9 @@ langcode: da
 status: true
 dependencies:
   config:
-    - core.entity_view_mode.media.1_column_flex_height
-    - core.entity_view_mode.media.2_column_flex_height
-    - core.entity_view_mode.media.3_column_flex_height
+    - core.entity_view_mode.media.large
+    - core.entity_view_mode.media.medium
+    - core.entity_view_mode.media.small
   module:
     - editor
     - media
@@ -54,10 +54,10 @@ filters:
     status: true
     weight: 100
     settings:
-      default_view_mode: 1_column_flex_height
+      default_view_mode: large
       allowed_view_modes:
-        1_column_flex_height: 1_column_flex_height
-        2_column_flex_height: 2_column_flex_height
-        3_column_flex_height: 3_column_flex_height
+        large: large
+        medium: medium
+        small: small
       allowed_media_types:
         image: image
