--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -118,6 +118,7 @@ module:
   sis_lexicon: 0
   sis_map: 0
   sis_migration: 0
+  sis_misc: 0
   sis_news: 0
   sis_organization: 0
   sis_overview: 0
