--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/sis.libraries.yml
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/sis.libraries.yml
@@ -16,6 +16,7 @@ master:
     layout:
       dist/components/css/layout/grid.css: {}
   dependencies:
+    - core/drupal.ajax
     - sis/theme-primary
     - sis/theme-green
 
