--- a/config/sync/user.role.authenticated.yml
+++ b/config/sync/user.role.authenticated.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - filter.format.basic_html
   module:
+    - field_permissions
     - filter
     - media
     - profile
@@ -28,5 +29,7 @@ permissions:
   - 'use text format basic_html'
   - 'view any organization profile'
   - 'view any profile'
+  - 'view field_article_related'
   - 'view media'
+  - 'view own field_article_related'
   - 'view the administration theme'
