--- a/config/sync/user.role.editor.yml
+++ b/config/sync/user.role.editor.yml
@@ -11,6 +11,7 @@ dependencies:
     - media.type.image
     - media.type.remote_video
     - media.type.sis_custom_video
+    - media.type.twentythree
     - media.type.video
     - node.type.almanac
     - node.type.article
@@ -36,6 +37,7 @@ dependencies:
     - content_translation
     - contextual
     - entity_clone
+    - field_permissions
     - file
     - filter
     - layout_builder
@@ -99,6 +101,7 @@ permissions:
   - 'create content translations'
   - 'create document media'
   - 'create dot_on_map content'
+  - 'create field_article_related'
   - 'create image media'
   - 'create media'
   - 'create news content'
@@ -155,6 +158,7 @@ permissions:
   - 'delete own page content'
   - 'delete own remote_video media'
   - 'delete own sis_custom_video media'
+  - 'delete own twentythree media'
   - 'delete own video media'
   - 'delete own webform'
   - 'delete own webform submission'
@@ -181,21 +185,25 @@ permissions:
   - 'edit any page content'
   - 'edit any remote_video media'
   - 'edit any sis_custom_video media'
+  - 'edit any twentythree media'
   - 'edit any video media'
   - 'edit any webform'
   - 'edit any webform submission'
   - 'edit atom'
+  - 'edit field_article_related'
   - 'edit own almanac content'
   - 'edit own article content'
   - 'edit own audio media'
   - 'edit own blog_post content'
   - 'edit own document media'
   - 'edit own dot_on_map content'
+  - 'edit own field_article_related'
   - 'edit own image media'
   - 'edit own news content'
   - 'edit own page content'
   - 'edit own remote_video media'
   - 'edit own sis_custom_video media'
+  - 'edit own twentythree media'
   - 'edit own video media'
   - 'edit own webform'
   - 'edit own webform submission'
