SIS2-461: Fixed overview scroll to top script

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/sis.libraries.yml
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/sis.libraries.yml
@@ -488,7 +488,7 @@ form-select:
 pager-overview:
   version: VERSION
   js:
-    dist/components/js/pager-overview.js: {}
+    js/pager-overview.js: {}
   dependencies:
     - core/drupal
 
