--- a/config/sync/core.entity_view_display.block_content.category_overview.default.yml
+++ b/config/sync/core.entity_view_display.block_content.category_overview.default.yml
@@ -17,7 +17,7 @@ content:
     type: category_overview_formatter
     label: hidden
     settings:
-      view_mode: teaser
+      view_mode: list
     third_party_settings: {  }
     weight: 0
     region: content
