SIS2-450 , SIS2-426 , SIS2-318, SIS2-423

--- a/config/sync/editor.editor.basic_html.yml
+++ b/config/sync/editor.editor.basic_html.yml
@@ -20,6 +20,12 @@ settings:
             - Bold
             - Italic
         -
+          name: Aligment
+          items:
+            - JustifyLeft
+            - JustifyCenter
+            - JustifyRight
+        -
           name: Linking
           items:
             - DrupalLink
