--- a/config/sync/core.entity_form_display.taxonomy_term.article_types.default.yml
+++ b/config/sync/core.entity_form_display.taxonomy_term.article_types.default.yml
@@ -6,9 +6,11 @@ dependencies:
     - field.field.taxonomy_term.article_types.field_link_liste_headline
     - field.field.taxonomy_term.article_types.field_overview
     - field.field.taxonomy_term.article_types.field_overview_headline
+    - field.field.taxonomy_term.article_types.field_page_link
     - taxonomy.vocabulary.article_types
   module:
     - entity_overview
+    - link
     - path
     - text
 _core:
@@ -28,7 +30,7 @@ content:
     third_party_settings: {  }
   field_link_liste_headline:
     type: string_textfield
-    weight: 2
+    weight: 3
     region: content
     settings:
       size: 60
@@ -36,21 +38,29 @@ content:
     third_party_settings: {  }
   field_overview:
     type: overview_filter_widget
-    weight: 4
+    weight: 5
     region: content
     settings: {  }
     third_party_settings: {  }
   field_overview_headline:
     type: string_textfield
-    weight: 3
+    weight: 4
     region: content
     settings:
       size: 60
       placeholder: ''
     third_party_settings: {  }
+  field_page_link:
+    type: link_default
+    weight: 2
+    region: content
+    settings:
+      placeholder_url: ''
+      placeholder_title: ''
+    third_party_settings: {  }
   langcode:
     type: language_select
-    weight: 5
+    weight: 6
     region: content
     settings:
       include_locked: true
@@ -65,19 +75,19 @@ content:
     third_party_settings: {  }
   path:
     type: path
-    weight: 7
+    weight: 8
     region: content
     settings: {  }
     third_party_settings: {  }
   status:
     type: boolean_checkbox
-    weight: 8
+    weight: 9
     region: content
     settings:
       display_label: true
     third_party_settings: {  }
   translation:
-    weight: 6
+    weight: 7
     region: content
     settings: {  }
     third_party_settings: {  }
