--- a/config/sync/filter.format.basic_html.yml
+++ b/config/sync/filter.format.basic_html.yml
@@ -18,7 +18,7 @@ filters:
     status: true
     weight: -10
     settings:
-      allowed_html: '<em> <strong> <cite> <blockquote cite> <code> <ul type> <ol type start> <li> <dl> <dt> <dd> <h1 id> <h2 id> <h3 id> <p> <br> <span> <img src alt data-entity-type data-entity-uuid data-align data-caption data-image-size width height> <a href hreflang target data-entity-substitution data-entity-type data-entity-uuid title> <table> <caption> <tbody> <thead> <tfoot> <th> <td> <tr>'
+      allowed_html: '<em> <strong> <cite> <blockquote cite> <code> <ul type> <ol type start> <li> <dl> <dt> <dd> <h1 id> <h2 id> <h3 id> <p class> <br> <span> <img src alt data-entity-type data-entity-uuid data-align data-caption data-image-size width height> <a href hreflang target data-entity-substitution data-entity-type data-entity-uuid title> <table> <caption> <tbody> <thead> <tfoot> <th> <td> <tr>'
       filter_html_help: false
       filter_html_nofollow: false
   filter_align:
