SIS2-450, SIS2-280, SIS2-249, SIS2-445, SIS2-279

--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -120,6 +120,7 @@ module:
   sis_migration: 0
   sis_misc: 0
   sis_news: 0
+  sis_oembed_control: 0
   sis_organization: 0
   sis_overview: 0
   sis_relewise: 0
