--- a/config/sync/core.entity_view_display.media.twentythree.default.yml
+++ b/config/sync/core.entity_view_display.media.twentythree.default.yml
@@ -7,6 +7,7 @@ dependencies:
     - media.type.twentythree
   module:
     - media
+    - sis_oembed_control
 id: media.twentythree.default
 targetEntityType: media
 bundle: twentythree
@@ -18,7 +19,9 @@ content:
     settings:
       max_width: 0
       max_height: 0
-    third_party_settings: {  }
+    third_party_settings:
+      sis_oembed_control:
+        video_autoplay: '1'
     weight: 0
     region: content
 hidden:
