--- a/config/sync/field.field.block_content.lexicon_teaser.field_lexicon_initial_letter.yml
+++ b/config/sync/field.field.block_content.lexicon_teaser.field_lexicon_initial_letter.yml
@@ -13,7 +13,7 @@ entity_type: block_content
 bundle: lexicon_teaser
 label: Forbogstav
 description: ''
-required: false
+required: true
 translatable: false
 default_value:
   -
