--- a/config/sync/core.entity_form_display.node.page.default.yml
+++ b/config/sync/core.entity_form_display.node.page.default.yml
@@ -12,6 +12,7 @@ dependencies:
     - field.field.node.page.field_hide_title
     - field.field.node.page.field_list_media
     - field.field.node.page.field_meta_tags
+    - field.field.node.page.field_search_exclude
     - field.field.node.page.layout_builder__layout
     - node.type.page
     - workflows.workflow.editorial
@@ -44,6 +45,7 @@ third_party_settings:
       children:
         - field_hide_title
         - field_hide_breadcrumb
+        - field_search_exclude
       label: Sideindstillinger
       region: content
       parent_name: ''
@@ -133,6 +135,13 @@ content:
     settings:
       sidebar: true
       use_details: true
+    third_party_settings: {  }
+  field_search_exclude:
+    type: boolean_checkbox
+    weight: 2
+    region: content
+    settings:
+      display_label: true
     third_party_settings: {  }
   langcode:
     type: language_select
