--- a/config/sync/core.entity_view_display.node.page.default.yml
+++ b/config/sync/core.entity_view_display.node.page.default.yml
@@ -12,6 +12,7 @@ dependencies:
     - field.field.node.page.field_hide_title
     - field.field.node.page.field_list_media
     - field.field.node.page.field_meta_tags
+    - field.field.node.page.field_search_exclude
     - field.field.node.page.layout_builder__layout
     - node.type.page
   module:
@@ -57,6 +58,16 @@ content:
     settings: {  }
     third_party_settings: {  }
     weight: 2
+    region: content
+  field_search_exclude:
+    type: boolean
+    label: above
+    settings:
+      format: default
+      format_custom_false: ''
+      format_custom_true: ''
+    third_party_settings: {  }
+    weight: 4
     region: content
   links:
     settings: {  }
