--- a/config/sync/core.entity_view_display.node.page.inline_navigation.yml
+++ b/config/sync/core.entity_view_display.node.page.inline_navigation.yml
@@ -13,6 +13,7 @@ dependencies:
     - field.field.node.page.field_hide_title
     - field.field.node.page.field_list_media
     - field.field.node.page.field_meta_tags
+    - field.field.node.page.field_search_exclude
     - field.field.node.page.layout_builder__layout
     - node.type.page
   module:
@@ -61,6 +62,7 @@ hidden:
   field_hide_breadcrumb: true
   field_hide_title: true
   field_meta_tags: true
+  field_search_exclude: true
   langcode: true
   layout_builder__layout: true
   links: true
