--- a/config/sync/core.entity_view_display.node.article.full.yml
+++ b/config/sync/core.entity_view_display.node.article.full.yml
@@ -130,6 +130,15 @@ content:
     third_party_settings: {  }
     weight: 3
     region: content
+  field_article_related:
+    type: entity_reference_entity_view
+    label: hidden
+    settings:
+      view_mode: list
+      link: false
+    third_party_settings: {  }
+    weight: 6
+    region: content
   field_description:
     type: basic_string
     label: hidden
@@ -158,7 +167,6 @@ hidden:
   content_moderation_control: true
   field_article_categories: true
   field_article_months: true
-  field_article_related: true
   field_article_type: true
   field_class: true
   field_colophon: true
