--- a/config/sync/field.field.block_content.entity_slideshow.field_entity_slideshow_term.yml
+++ b/config/sync/field.field.block_content.entity_slideshow.field_entity_slideshow_term.yml
@@ -12,7 +12,7 @@ entity_type: block_content
 bundle: entity_slideshow
 label: Kategori
 description: ''
-required: true
+required: false
 translatable: false
 default_value: {  }
 default_value_callback: ''
