--- a/config/sync/field.storage.block_content.field_entity_slideshow_term.yml
+++ b/config/sync/field.storage.block_content.field_entity_slideshow_term.yml
@@ -4,7 +4,11 @@ status: true
 dependencies:
   module:
     - block_content
+    - field_permissions
     - taxonomy
+third_party_settings:
+  field_permissions:
+    permission_type: public
 id: block_content.field_entity_slideshow_term
 field_name: field_entity_slideshow_term
 entity_type: block_content
