--- a/config/sync/image.style.article.yml
+++ b/config/sync/image.style.article.yml
@@ -1,18 +1,16 @@
 uuid: b9671950-540b-498c-ab9f-fc9cfd2f3cf7
 langcode: da
 status: true
-dependencies:
-  module:
-    - focal_point
+dependencies: {  }
 name: article
 label: Article
 effects:
-  e3ce9605-fc87-4688-8524-75dd0efb29d6:
-    uuid: e3ce9605-fc87-4688-8524-75dd0efb29d6
-    id: focal_point_scale_and_crop
+  c47afc4d-6e41-43d5-8262-e6b88c4595b8:
+    uuid: c47afc4d-6e41-43d5-8262-e6b88c4595b8
+    id: image_scale
     weight: 2
     data:
       width: 900
       height: 400
-      crop_type: focal_point
+      upscale: false
 pipeline: __default__
