--- a/config/sync/core.entity_view_display.node.article.default.yml
+++ b/config/sync/core.entity_view_display.node.article.default.yml
@@ -29,6 +29,7 @@ dependencies:
     - field.field.node.article.field_location
     - field.field.node.article.field_materials
     - field.field.node.article.field_media_downloads
+    - field.field.node.article.field_meta_tags
     - field.field.node.article.field_season
     - field.field.node.article.field_section_bg_graphics
     - field.field.node.article.field_section_bg_graphics_pos
@@ -42,6 +43,7 @@ dependencies:
   module:
     - layout_builder
     - layout_builder_restrictions
+    - metatag
     - text
     - user
 third_party_settings:
@@ -90,6 +92,13 @@ content:
       link: true
     third_party_settings: {  }
     weight: 2
+    region: content
+  field_meta_tags:
+    type: metatag_empty_formatter
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    weight: 4
     region: content
 hidden:
   content_hierarchy: true
