--- a/config/sync/core.entity_view_display.node.article.full.yml
+++ b/config/sync/core.entity_view_display.node.article.full.yml
@@ -30,6 +30,7 @@ dependencies:
     - field.field.node.article.field_location
     - field.field.node.article.field_materials
     - field.field.node.article.field_media_downloads
+    - field.field.node.article.field_meta_tags
     - field.field.node.article.field_season
     - field.field.node.article.field_section_bg_graphics
     - field.field.node.article.field_section_bg_graphics_pos
@@ -184,6 +185,7 @@ hidden:
   field_location: true
   field_materials: true
   field_media_downloads: true
+  field_meta_tags: true
   field_season: true
   field_section_bg_graphics: true
   field_section_bg_graphics_pos: true
