--- a/config/sync/core.entity_view_display.node.article.simple_list.yml
+++ b/config/sync/core.entity_view_display.node.article.simple_list.yml
@@ -25,6 +25,7 @@ dependencies:
     - field.field.node.article.field_list_media
     - field.field.node.article.field_location
     - field.field.node.article.field_media_downloads
+    - field.field.node.article.field_meta_tags
     - field.field.node.article.field_season
     - field.field.node.article.field_section_bg_graphics
     - field.field.node.article.field_section_bg_graphics_pos
@@ -95,6 +96,7 @@ hidden:
   field_location: true
   field_materials: true
   field_media_downloads: true
+  field_meta_tags: true
   field_season: true
   field_section_bg_graphics: true
   field_section_bg_graphics_pos: true
