--- a/config/sync/core.entity_view_display.node.blog_post.teaser.yml
+++ b/config/sync/core.entity_view_display.node.blog_post.teaser.yml
@@ -6,6 +6,7 @@ dependencies:
     - core.entity_view_mode.node.teaser
     - field.field.node.blog_post.body
     - field.field.node.blog_post.field_list_media
+    - field.field.node.blog_post.field_meta_tags
     - field.field.node.blog_post.field_section_bg_graphics
     - field.field.node.blog_post.field_section_bg_graphics_pos
     - node.type.blog_post
@@ -32,6 +33,7 @@ content:
     region: content
 hidden:
   field_list_media: true
+  field_meta_tags: true
   field_section_bg_graphics: true
   field_section_bg_graphics_pos: true
   langcode: true
