--- a/config/sync/core.entity_view_display.node.dot_on_map.teaser.yml
+++ b/config/sync/core.entity_view_display.node.dot_on_map.teaser.yml
@@ -9,6 +9,7 @@ dependencies:
     - field.field.node.dot_on_map.field_contact_information
     - field.field.node.dot_on_map.field_files
     - field.field.node.dot_on_map.field_location
+    - field.field.node.dot_on_map.field_meta_tags
     - field.field.node.dot_on_map.field_people_and_places
     - field.field.node.dot_on_map.field_replant_the_planet
     - field.field.node.dot_on_map.field_season
@@ -51,6 +52,7 @@ hidden:
   field_contact_information: true
   field_files: true
   field_location: true
+  field_meta_tags: true
   field_people_and_places: true
   field_replant_the_planet: true
   field_season: true
