SIS2-321, SIS2-365, SIS2-455, SIS2-472, SIS2-471, SIS2-474, SIS2-413

--- a/config/sync/field.field.node.article.field_article_image.yml
+++ b/config/sync/field.field.node.article.field_article_image.yml
@@ -11,7 +11,7 @@ field_name: field_article_image
 entity_type: node
 bundle: article
 label: 'Article image'
-description: 'Et billede vist i begyndelsen af artiklen, under resuméet og før teksten.'
+description: "Et billede vist i begyndelsen af artiklen, under resuméet og før teksten.\r\nVi anbefaler et billedeformat på 900px X 400px. Ellers vil dit billede blive beskåret."
 required: false
 translatable: false
 default_value: {  }
