--- a/config/sync/core.entity_form_display.node.page.default.yml
+++ b/config/sync/core.entity_form_display.node.page.default.yml
@@ -67,7 +67,7 @@ mode: default
 content:
   content_hierarchy:
     type: content_hierarchy_modal
-    weight: 102
+    weight: 16
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -83,16 +83,6 @@ content:
     region: content
     settings:
       rows: 3
-      placeholder: ''
-    third_party_settings: {  }
-  field_graphics:
-    type: entity_reference_autocomplete
-    weight: 101
-    region: content
-    settings:
-      match_operator: CONTAINS
-      match_limit: 10
-      size: 60
       placeholder: ''
     third_party_settings: {  }
   field_header:
@@ -152,7 +142,7 @@ content:
     third_party_settings: {  }
   moderation_state:
     type: moderation_state_default
-    weight: 100
+    weight: 15
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -213,4 +203,5 @@ content:
     third_party_settings: {  }
 hidden:
   body: true
+  field_graphics: true
   layout_builder__layout: true
