--- a/config/sync/views.view.taxonomy_term.yml
+++ b/config/sync/views.view.taxonomy_term.yml
@@ -1,6 +1,6 @@
 uuid: 4ca3f736-22a9-45ac-b57d-5ae2ef46e640
 langcode: da
-status: false
+status: true
 dependencies:
   config:
     - core.entity_view_mode.node.teaser
@@ -26,15 +26,17 @@ display:
     display_options:
       fields: {  }
       pager:
-        type: mini
+        type: full
         options:
           offset: 0
-          items_per_page: 10
+          items_per_page: 12
           total_pages: 0
           id: 0
           tags:
             next: ››
             previous: ‹‹
+            first: '« First'
+            last: 'Last »'
           expose:
             items_per_page: false
             items_per_page_label: 'Antal elementer'
@@ -43,6 +45,7 @@ display:
             items_per_page_options_all_label: '- Alle -'
             offset: false
             offset_label: Forskydning
+          quantity: 9
       exposed_form:
         type: basic
         options:
@@ -62,33 +65,21 @@ display:
         options: {  }
       empty: {  }
       sorts:
-        sticky:
-          id: sticky
-          table: taxonomy_index
-          field: sticky
+        title:
+          id: title
+          table: node_field_data
+          field: title
           relationship: none
           group_type: group
           admin_label: ''
+          entity_type: node
+          entity_field: title
           plugin_id: standard
-          order: DESC
+          order: ASC
           expose:
             label: ''
-            field_identifier: sticky
+            field_identifier: ''
           exposed: false
-        created:
-          id: created
-          table: taxonomy_index
-          field: created
-          relationship: none
-          group_type: group
-          admin_label: ''
-          plugin_id: date
-          order: DESC
-          expose:
-            label: ''
-            field_identifier: created
-          exposed: false
-          granularity: second
       arguments:
         tid:
           id: tid
@@ -215,8 +206,7 @@ display:
       style:
         type: default
         options:
-          grouping: {  }
-          row_class: ''
+          row_class: row
           default_row_class: true
           uses_fields: false
       row:
@@ -265,6 +255,7 @@ display:
     display_plugin: feed
     position: 2
     display_options:
+      enabled: false
       pager:
         type: some
         options:
