--- a/webroot/sites/skoven-i-skolen.dk/modules/sis_articles/sis_articles.links.menu.yml
+++ b/webroot/sites/skoven-i-skolen.dk/modules/sis_articles/sis_articles.links.menu.yml
@@ -5,3 +5,10 @@ sis_articles.add_content:
   weight: -100
   route_parameters: { node_type: 'article' }
   menu_name: 'meta-menu'
+
+sis_articles.add_blog:
+  title: 'Add blog post'
+  route_name: node.add
+  weight: -100
+  route_parameters: { node_type: 'blog_post' }
+  menu_name: 'meta-menu'
