--- a/config/sync/field.field.node.article.field_article_months.yml
+++ b/config/sync/field.field.node.article.field_article_months.yml
@@ -22,7 +22,7 @@ settings:
     target_bundles:
       month: month
     sort:
-      field: name
+      field: weight
       direction: asc
     auto_create: false
     auto_create_bundle: ''
