--- a/config/sync/field.field.node.news.field_article_categories.yml
+++ b/config/sync/field.field.node.news.field_article_categories.yml
@@ -26,7 +26,7 @@ settings:
     target_bundles:
       article_categories: article_categories
     sort:
-      field: name
+      field: weight
       direction: asc
     auto_create: false
     auto_create_bundle: ''
