--- a/config/sync/core.entity_view_display.node.article.list.yml
+++ b/config/sync/core.entity_view_display.node.article.list.yml
@@ -101,6 +101,7 @@ hidden:
   content_hierarchy: true
   field_article_categories: true
   field_article_image: true
+  field_article_image_migrated: true
   field_article_months: true
   field_article_related: true
   field_article_type: true
