--- a/config/sync/core.entity_view_display.node.article.slideshow.yml
+++ b/config/sync/core.entity_view_display.node.article.slideshow.yml
@@ -99,6 +99,7 @@ hidden:
   content_hierarchy: true
   content_moderation_control: true
   field_article_categories: true
+  field_article_image_migrated: true
   field_article_months: true
   field_article_related: true
   field_article_type: true
