--- a/config/sync/core.entity_view_display.node.blog_post.default.yml
+++ b/config/sync/core.entity_view_display.node.blog_post.default.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - field.field.node.blog_post.body
+    - field.field.node.blog_post.field_article_type
     - field.field.node.blog_post.field_list_media
     - field.field.node.blog_post.field_meta_tags
     - field.field.node.blog_post.field_section_bg_graphics
@@ -38,6 +39,7 @@ content:
     weight: 0
     region: content
 hidden:
+  field_article_type: true
   field_list_media: true
   field_section_bg_graphics: true
   field_section_bg_graphics_pos: true
