--- a/config/sync/core.entity_view_display.node.blog_post.list.yml
+++ b/config/sync/core.entity_view_display.node.blog_post.list.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - core.entity_view_mode.node.list
     - field.field.node.blog_post.body
+    - field.field.node.blog_post.field_article_type
     - field.field.node.blog_post.field_list_media
     - field.field.node.blog_post.field_meta_tags
     - field.field.node.blog_post.field_section_bg_graphics
@@ -45,6 +46,7 @@ content:
     weight: 0
     region: content
 hidden:
+  field_article_type: true
   field_meta_tags: true
   field_section_bg_graphics: true
   field_section_bg_graphics_pos: true
