--- a/config/sync/field.storage.node.field_copy_sheet.yml
+++ b/config/sync/field.storage.node.field_copy_sheet.yml
@@ -3,8 +3,12 @@ langcode: da
 status: true
 dependencies:
   module:
+    - field_permissions
     - media
     - node
+third_party_settings:
+  field_permissions:
+    permission_type: custom
 id: node.field_copy_sheet
 field_name: field_copy_sheet
 entity_type: node
