--- a/config/sync/field.storage.node.field_files.yml
+++ b/config/sync/field.storage.node.field_files.yml
@@ -3,8 +3,12 @@ langcode: da
 status: true
 dependencies:
   module:
+    - field_permissions
     - file
     - node
+third_party_settings:
+  field_permissions:
+    permission_type: custom
 id: node.field_files
 field_name: field_files
 entity_type: node
