--- a/config/sync/field.storage.node.field_list_media.yml
+++ b/config/sync/field.storage.node.field_list_media.yml
@@ -3,8 +3,12 @@ langcode: da
 status: true
 dependencies:
   module:
+    - field_permissions
     - media
     - node
+third_party_settings:
+  field_permissions:
+    permission_type: public
 _core:
   default_config_hash: F9XDHqGLLRFaN02pZ4Rsa3Jt1-4GGgioutnB3tfGu4E
 id: node.field_list_media
