--- a/config/sync/field.storage.node.lat.yml
+++ b/config/sync/field.storage.node.lat.yml
@@ -3,7 +3,11 @@ langcode: da
 status: true
 dependencies:
   module:
+    - field_permissions
     - node
+third_party_settings:
+  field_permissions:
+    permission_type: public
 id: node.lat
 field_name: lat
 entity_type: node
