--- a/config/sync/field.storage.node.sis_map_address_dawa.yml
+++ b/config/sync/field.storage.node.sis_map_address_dawa.yml
@@ -4,7 +4,11 @@ status: true
 dependencies:
   module:
     - dds_dawa
+    - field_permissions
     - node
+third_party_settings:
+  field_permissions:
+    permission_type: public
 id: node.sis_map_address_dawa
 field_name: sis_map_address_dawa
 entity_type: node
