--- a/config/sync/user.role.anonymous.yml
+++ b/config/sync/user.role.anonymous.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - filter.format.basic_html
+    - media.type.image
     - node.type.article
     - node.type.dot_on_map
     - workflows.workflow.editorial
@@ -23,9 +24,13 @@ weight: 0
 is_admin: false
 permissions:
   - 'access content'
+  - 'access media overview'
   - 'access user profiles'
   - 'create article content'
   - 'create dot_on_map content'
+  - 'create image media'
+  - 'delete own image media'
+  - 'edit own image media'
   - 'search content'
   - 'use editorial transition create_new_draft'
   - 'use text format basic_html'
@@ -34,4 +39,4 @@ permissions:
   - 'view field_article_related'
   - 'view media'
   - 'view own field_article_related'
-  - 'view the administration theme'
+  - 'view own unpublished media'
