--- a/config/sync/user.role.writer.yml
+++ b/config/sync/user.role.writer.yml
@@ -3,22 +3,39 @@ langcode: da
 status: true
 dependencies:
   config:
+    - media.type.document
+    - media.type.image
+    - media.type.remote_video
+    - media.type.video
     - node.type.blog_post
     - node.type.dot_on_map
   module:
+    - media
     - node
-    - system
 id: writer
 label: Blogger
 weight: 7
 is_admin: null
 permissions:
+  - 'access media overview'
   - 'create blog_post content'
+  - 'create document media'
   - 'create dot_on_map content'
+  - 'create image media'
+  - 'create remote_video media'
+  - 'create video media'
   - 'delete blog_post revisions'
   - 'delete own blog_post content'
+  - 'delete own document media'
+  - 'delete own image media'
+  - 'delete own remote_video media'
+  - 'delete own video media'
   - 'edit own blog_post content'
+  - 'edit own document media'
+  - 'edit own image media'
+  - 'edit own remote_video media'
+  - 'edit own video media'
   - 'revert blog_post revisions'
   - 'view blog_post revisions'
   - 'view own unpublished content'
-  - 'view the administration theme'
+  - 'view own unpublished media'
