--- a/config/sync/core.entity_view_display.block_content.appetizer.default.yml
+++ b/config/sync/core.entity_view_display.block_content.appetizer.default.yml
@@ -11,6 +11,7 @@ dependencies:
     - field.field.block_content.appetizer.field_appetizer_orientation
     - field.field.block_content.appetizer.field_appetizer_text
     - field.field.block_content.appetizer.field_appetizer_text_alignment
+    - field.field.block_content.appetizer.field_dynamic_height
     - field.field.block_content.appetizer.field_image_overflow
   module:
     - options
@@ -80,6 +81,16 @@ content:
     settings: {  }
     third_party_settings: {  }
     weight: 6
+    region: content
+  field_dynamic_height:
+    type: boolean
+    label: above
+    settings:
+      format: default
+      format_custom_false: ''
+      format_custom_true: ''
+    third_party_settings: {  }
+    weight: 9
     region: content
   field_image_overflow:
     type: boolean
