--- a/config/sync/field.storage.block_content.field_dynamic_height.yml
+++ b/config/sync/field.storage.block_content.field_dynamic_height.yml
@@ -4,6 +4,10 @@ status: true
 dependencies:
   module:
     - block_content
+    - field_permissions
+third_party_settings:
+  field_permissions:
+    permission_type: public
 _core:
   default_config_hash: Cuoye3ZIRPuTrW2xC_8_7P5YWB7_JzrboMbUxm8IYYI
 id: block_content.field_dynamic_height
