--- a/composer.json
+++ b/composer.json
@@ -61,6 +61,7 @@
         "drupal/linkit": "^6.0.0-beta2",
         "drupal/lupus_taxonomy_import": "^1.2",
         "drupal/mailsystem": "^4.3",
+        "drupal/media_directories": "^2.0",
         "drupal/media_library_bulk_upload": "^1.0@alpha",
         "drupal/menu_item_extras": "^2.16",
         "drupal/metatag": "^1.0",
