--- a/config/sync/views.view.media.yml
+++ b/config/sync/views.view.media.yml
@@ -8,6 +8,7 @@ dependencies:
   module:
     - image
     - media
+    - media_directories
     - taxonomy
     - user
 _core:
@@ -537,11 +538,11 @@ display:
         options:
           submit_button: Filter
           reset_button: false
-          reset_button_label: Reset
-          exposed_sorts_label: 'Sort by'
+          reset_button_label: Gendan
+          exposed_sorts_label: 'Sortér efter'
           expose_sort_order: true
-          sort_asc_label: Asc
-          sort_desc_label: Desc
+          sort_asc_label: Stigende
+          sort_desc_label: Faldende
       access:
         type: perm
         options:
@@ -559,7 +560,7 @@ display:
           admin_label: ''
           plugin_id: text_custom
           empty: true
-          content: 'Ingen tilgængelige media.'
+          content: 'Ingen tilgængelige media'
           tokenize: false
       sorts:
         created:
@@ -580,6 +581,38 @@ display:
           granularity: second
       arguments: {  }
       filters:
+        directory:
+          id: directory
+          table: media_field_data
+          field: directory
+          relationship: none
+          group_type: group
+          admin_label: ''
+          entity_type: media
+          entity_field: directory
+          plugin_id: media_directory
+          operator: or
+          value: {  }
+          group: 1
+          exposed: true
+          expose:
+            operator_id: directory_op
+            label: Directory
+            description: ''
+            use_operator: false
+            operator: directory_op
+            operator_limit_selection: false
+            operator_list: {  }
+            identifier: directory
+            required: false
+            remember: false
+            multiple: false
+            remember_roles: {  }
+            reduce: false
+          is_grouped: false
+          group_info: {  }
+          reduce_duplicates: false
+          error_message: true
         name:
           id: name
           table: media_field_data
