--- a/config/sync/views.view.media_library.yml
+++ b/config/sync/views.view.media_library.yml
@@ -9,6 +9,7 @@ dependencies:
   module:
     - image
     - media
+    - media_directories
     - media_library
     - taxonomy
     - user
@@ -161,7 +162,7 @@ display:
           submit_button: 'Tilføj filtre'
           reset_button: false
           reset_button_label: Gendan
-          exposed_sorts_label: 'Sort by'
+          exposed_sorts_label: 'Sortér efter'
           expose_sort_order: false
           sort_asc_label: Stigende
           sort_desc_label: Faldende
@@ -182,7 +183,7 @@ display:
           admin_label: ''
           plugin_id: text_custom
           empty: true
-          content: 'Ingen tilgængelige media.'
+          content: 'Ingen tilgængelige media'
           tokenize: false
       sorts:
         created:
@@ -232,6 +233,38 @@ display:
             field_identifier: name_1
           exposed: true
       filters:
+        directory:
+          id: directory
+          table: media_field_data
+          field: directory
+          relationship: none
+          group_type: group
+          admin_label: ''
+          entity_type: media
+          entity_field: directory
+          plugin_id: media_directory
+          operator: or
+          value: {  }
+          group: 1
+          exposed: true
+          expose:
+            operator_id: directory_op
+            label: Directory
+            description: ''
+            use_operator: false
+            operator: directory_op
+            operator_limit_selection: false
+            operator_list: {  }
+            identifier: directory
+            required: false
+            remember: false
+            multiple: false
+            remember_roles: {  }
+            reduce: false
+          is_grouped: false
+          group_info: {  }
+          reduce_duplicates: false
+          error_message: true
         name:
           id: name
           table: media_field_data
@@ -546,18 +579,31 @@ display:
         - 'config:core.entity_view_display.media.audio.media_library'
         - 'config:core.entity_view_display.media.document.default'
         - 'config:core.entity_view_display.media.document.media_library'
+        - 'config:core.entity_view_display.media.graphics.default'
+        - 'config:core.entity_view_display.media.graphics.media_library'
         - 'config:core.entity_view_display.media.icon.default'
         - 'config:core.entity_view_display.media.icon.media_library'
         - 'config:core.entity_view_display.media.image.1_column'
+        - 'config:core.entity_view_display.media.image.1_column_flex_height'
         - 'config:core.entity_view_display.media.image.2_column'
+        - 'config:core.entity_view_display.media.image.2_column_flex_height'
         - 'config:core.entity_view_display.media.image.3_column'
+        - 'config:core.entity_view_display.media.image.3_column_flex_height'
         - 'config:core.entity_view_display.media.image.appetiser'
         - 'config:core.entity_view_display.media.image.appetiser_wide'
+        - 'config:core.entity_view_display.media.image.article'
+        - 'config:core.entity_view_display.media.image.article_migrated'
         - 'config:core.entity_view_display.media.image.default'
+        - 'config:core.entity_view_display.media.image.entity_slideshow'
         - 'config:core.entity_view_display.media.image.full_width_16_9'
+        - 'config:core.entity_view_display.media.image.full_width_flex_height'
         - 'config:core.entity_view_display.media.image.hero'
         - 'config:core.entity_view_display.media.image.inline_navigation'
+        - 'config:core.entity_view_display.media.image.large'
+        - 'config:core.entity_view_display.media.image.list'
         - 'config:core.entity_view_display.media.image.media_library'
+        - 'config:core.entity_view_display.media.image.medium'
+        - 'config:core.entity_view_display.media.image.small'
         - 'config:core.entity_view_display.media.remote_video.1_column'
         - 'config:core.entity_view_display.media.remote_video.2_column'
         - 'config:core.entity_view_display.media.remote_video.3_column'
@@ -565,6 +611,10 @@ display:
         - 'config:core.entity_view_display.media.remote_video.full_width_16_9'
         - 'config:core.entity_view_display.media.remote_video.hero'
         - 'config:core.entity_view_display.media.remote_video.media_library'
+        - 'config:core.entity_view_display.media.sis_custom_video.default'
+        - 'config:core.entity_view_display.media.sis_custom_video.media_library'
+        - 'config:core.entity_view_display.media.twentythree.default'
+        - 'config:core.entity_view_display.media.twentythree.media_library'
         - 'config:core.entity_view_display.media.video.default'
         - 'config:core.entity_view_display.media.video.media_library'
   page:
@@ -868,18 +918,31 @@ display:
         - 'config:core.entity_view_display.media.audio.media_library'
         - 'config:core.entity_view_display.media.document.default'
         - 'config:core.entity_view_display.media.document.media_library'
+        - 'config:core.entity_view_display.media.graphics.default'
+        - 'config:core.entity_view_display.media.graphics.media_library'
         - 'config:core.entity_view_display.media.icon.default'
         - 'config:core.entity_view_display.media.icon.media_library'
         - 'config:core.entity_view_display.media.image.1_column'
+        - 'config:core.entity_view_display.media.image.1_column_flex_height'
         - 'config:core.entity_view_display.media.image.2_column'
+        - 'config:core.entity_view_display.media.image.2_column_flex_height'
         - 'config:core.entity_view_display.media.image.3_column'
+        - 'config:core.entity_view_display.media.image.3_column_flex_height'
         - 'config:core.entity_view_display.media.image.appetiser'
         - 'config:core.entity_view_display.media.image.appetiser_wide'
+        - 'config:core.entity_view_display.media.image.article'
+        - 'config:core.entity_view_display.media.image.article_migrated'
         - 'config:core.entity_view_display.media.image.default'
+        - 'config:core.entity_view_display.media.image.entity_slideshow'
         - 'config:core.entity_view_display.media.image.full_width_16_9'
+        - 'config:core.entity_view_display.media.image.full_width_flex_height'
         - 'config:core.entity_view_display.media.image.hero'
         - 'config:core.entity_view_display.media.image.inline_navigation'
+        - 'config:core.entity_view_display.media.image.large'
+        - 'config:core.entity_view_display.media.image.list'
         - 'config:core.entity_view_display.media.image.media_library'
+        - 'config:core.entity_view_display.media.image.medium'
+        - 'config:core.entity_view_display.media.image.small'
         - 'config:core.entity_view_display.media.remote_video.1_column'
         - 'config:core.entity_view_display.media.remote_video.2_column'
         - 'config:core.entity_view_display.media.remote_video.3_column'
@@ -887,6 +950,10 @@ display:
         - 'config:core.entity_view_display.media.remote_video.full_width_16_9'
         - 'config:core.entity_view_display.media.remote_video.hero'
         - 'config:core.entity_view_display.media.remote_video.media_library'
+        - 'config:core.entity_view_display.media.sis_custom_video.default'
+        - 'config:core.entity_view_display.media.sis_custom_video.media_library'
+        - 'config:core.entity_view_display.media.twentythree.default'
+        - 'config:core.entity_view_display.media.twentythree.media_library'
         - 'config:core.entity_view_display.media.video.default'
         - 'config:core.entity_view_display.media.video.media_library'
   widget:
@@ -1044,6 +1111,38 @@ display:
           transform_dash: false
           break_phrase: false
       filters:
+        directory:
+          id: directory
+          table: media_field_data
+          field: directory
+          relationship: none
+          group_type: group
+          admin_label: ''
+          entity_type: media
+          entity_field: directory
+          plugin_id: media_directory
+          operator: or
+          value: {  }
+          group: 1
+          exposed: true
+          expose:
+            operator_id: directory_op
+            label: Directory
+            description: ''
+            use_operator: false
+            operator: directory_op
+            operator_limit_selection: false
+            operator_list: {  }
+            identifier: directory
+            required: false
+            remember: false
+            multiple: false
+            remember_roles: {  }
+            reduce: false
+          is_grouped: false
+          group_info: {  }
+          reduce_duplicates: false
+          error_message: true
         status:
           id: status
           table: media_field_data
@@ -1264,18 +1363,31 @@ display:
         - 'config:core.entity_view_display.media.audio.media_library'
         - 'config:core.entity_view_display.media.document.default'
         - 'config:core.entity_view_display.media.document.media_library'
+        - 'config:core.entity_view_display.media.graphics.default'
+        - 'config:core.entity_view_display.media.graphics.media_library'
         - 'config:core.entity_view_display.media.icon.default'
         - 'config:core.entity_view_display.media.icon.media_library'
         - 'config:core.entity_view_display.media.image.1_column'
+        - 'config:core.entity_view_display.media.image.1_column_flex_height'
         - 'config:core.entity_view_display.media.image.2_column'
+        - 'config:core.entity_view_display.media.image.2_column_flex_height'
         - 'config:core.entity_view_display.media.image.3_column'
+        - 'config:core.entity_view_display.media.image.3_column_flex_height'
         - 'config:core.entity_view_display.media.image.appetiser'
         - 'config:core.entity_view_display.media.image.appetiser_wide'
+        - 'config:core.entity_view_display.media.image.article'
+        - 'config:core.entity_view_display.media.image.article_migrated'
         - 'config:core.entity_view_display.media.image.default'
+        - 'config:core.entity_view_display.media.image.entity_slideshow'
         - 'config:core.entity_view_display.media.image.full_width_16_9'
+        - 'config:core.entity_view_display.media.image.full_width_flex_height'
         - 'config:core.entity_view_display.media.image.hero'
         - 'config:core.entity_view_display.media.image.inline_navigation'
+        - 'config:core.entity_view_display.media.image.large'
+        - 'config:core.entity_view_display.media.image.list'
         - 'config:core.entity_view_display.media.image.media_library'
+        - 'config:core.entity_view_display.media.image.medium'
+        - 'config:core.entity_view_display.media.image.small'
         - 'config:core.entity_view_display.media.remote_video.1_column'
         - 'config:core.entity_view_display.media.remote_video.2_column'
         - 'config:core.entity_view_display.media.remote_video.3_column'
@@ -1283,6 +1395,10 @@ display:
         - 'config:core.entity_view_display.media.remote_video.full_width_16_9'
         - 'config:core.entity_view_display.media.remote_video.hero'
         - 'config:core.entity_view_display.media.remote_video.media_library'
+        - 'config:core.entity_view_display.media.sis_custom_video.default'
+        - 'config:core.entity_view_display.media.sis_custom_video.media_library'
+        - 'config:core.entity_view_display.media.twentythree.default'
+        - 'config:core.entity_view_display.media.twentythree.media_library'
         - 'config:core.entity_view_display.media.video.default'
         - 'config:core.entity_view_display.media.video.media_library'
   widget_table:
@@ -1402,6 +1518,38 @@ display:
           transform_dash: false
           break_phrase: false
       filters:
+        directory:
+          id: directory
+          table: media_field_data
+          field: directory
+          relationship: none
+          group_type: group
+          admin_label: ''
+          entity_type: media
+          entity_field: directory
+          plugin_id: media_directory
+          operator: or
+          value: {  }
+          group: 1
+          exposed: true
+          expose:
+            operator_id: directory_op
+            label: Directory
+            description: ''
+            use_operator: false
+            operator: directory_op
+            operator_limit_selection: false
+            operator_list: {  }
+            identifier: directory
+            required: false
+            remember: false
+            multiple: false
+            remember_roles: {  }
+            reduce: false
+          is_grouped: false
+          group_info: {  }
+          reduce_duplicates: false
+          error_message: true
         status:
           id: status
           table: media_field_data
