SIS2-500: Enable file browser on CK Editor for Full HTML

--- a/config/sync/editor.editor.full_html.yml
+++ b/config/sync/editor.editor.full_html.yml
@@ -41,7 +41,7 @@ settings:
           name: Media
           items:
             - Blockquote
-            - DrupalMediaLibrary
+            - media_directories
             - Table
             - HorizontalRule
         -
