--- a/config/sync/core.entity_form_display.node.article.default.yml
+++ b/config/sync/core.entity_form_display.node.article.default.yml
@@ -3,6 +3,7 @@ langcode: da
 status: true
 dependencies:
   config:
+    - entity_browser.browser.media_directories_modal
     - field.field.node.article.body
     - field.field.node.article.content_hierarchy
     - field.field.node.article.field_article_categories
@@ -45,6 +46,7 @@ dependencies:
     - content_moderation
     - datetime
     - dds_dawa
+    - entity_browser
     - field_group
     - file
     - media_library
@@ -499,11 +501,18 @@ content:
     settings: {  }
     third_party_settings: {  }
   field_article_image:
-    type: media_library_widget
+    type: entity_browser_entity_reference
     weight: 4
     region: content
     settings:
-      media_types: {  }
+      entity_browser: media_directories_modal
+      field_widget_display: label
+      field_widget_edit: true
+      field_widget_remove: true
+      field_widget_replace: false
+      open: false
+      field_widget_display_settings: {  }
+      selection_mode: selection_append
     third_party_settings: {  }
   field_article_months:
     type: options_buttons
