SIS2-365, SIS2-302, SIS2-432, SIS2-449, SIS2-496, SIS2-372, SIS2-431, SIS2-403

--- a/config/sync/field.field.user.user.field_summary.yml
+++ b/config/sync/field.field.user.user.field_summary.yml
@@ -11,7 +11,7 @@ field_name: field_summary
 entity_type: user
 bundle: user
 label: Resumé
-description: 'Skriv et kort resumé om dig selv. Det vil blive vist på hver blogside, du udgiver, og muligvis på andre relaterede blogsider.'
+description: 'Skriv et kort resumé om dig selv.'
 required: false
 translatable: false
 default_value: {  }
