SIS2-502: Added background graphics fish

--- a/config/sync/field.storage.profile.field_section_bg_graphics.yml
+++ b/config/sync/field.storage.profile.field_section_bg_graphics.yml
@@ -12,6 +12,9 @@ type: list_string
 settings:
   allowed_values:
     -
+      value: fish
+      label: Fisk
+    -
       value: birds
       label: Fugle
     -
