--- a/config/sync/field.storage.node.field_section_bg_graphics.yml
+++ b/config/sync/field.storage.node.field_section_bg_graphics.yml
@@ -16,6 +16,9 @@ type: list_string
 settings:
   allowed_values:
     -
+      value: fish
+      label: Fisk
+    -
       value: birds
       label: Fugle
     -
